WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215341
AuxiliaryProcess::didReceiveInvalidMessage() for WebPage::PerformDragControllerAction IPC
https://bugs.webkit.org/show_bug.cgi?id=215341
Summary
AuxiliaryProcess::didReceiveInvalidMessage() for WebPage::PerformDragControll...
Chris Dumez
Reported
2020-08-10 15:46:20 PDT
AuxiliaryProcess::didReceiveInvalidMessage() for WebPage::PerformDragControllerAction IPC.
Attachments
Patch
(21.51 KB, patch)
2020-08-10 16:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(21.75 KB, patch)
2020-08-10 16:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(21.99 KB, patch)
2020-08-10 16:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(21.95 KB, patch)
2020-08-10 16:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(24.45 KB, patch)
2020-08-10 16:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-08-10 15:46:33 PDT
<
rdar://problem/59344091
>
Chris Dumez
Comment 2
2020-08-10 16:06:53 PDT
Created
attachment 406335
[details]
Patch
Chris Dumez
Comment 3
2020-08-10 16:11:44 PDT
Created
attachment 406339
[details]
Patch
Chris Dumez
Comment 4
2020-08-10 16:17:38 PDT
Created
attachment 406341
[details]
Patch
Chris Dumez
Comment 5
2020-08-10 16:19:48 PDT
Working on getting GTK/WPE building
Wenson Hsieh
Comment 6
2020-08-10 16:33:05 PDT
Comment on
attachment 406341
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406341&action=review
> Tools/TestWebKitAPI/Tests/mac/DragAndDropTestsMac.mm:151 > + return [NSEvent mouseEventWithType:NSEventTypeLeftMouseDragged > + location:NSMakePoint(0, 200) > + modifierFlags:NSEventModifierFlagOption > + timestamp:[NSDate timeIntervalSinceReferenceDate] > + windowNumber:0 > + context:nil > + eventNumber:1 > + clickCount:1 > + pressure:1];
(Minor style nit - we should either make this all 1 line, or left align all the parameters)
Chris Dumez
Comment 7
2020-08-10 16:36:01 PDT
Created
attachment 406344
[details]
Patch
David Kilzer (:ddkilzer)
Comment 8
2020-08-10 16:42:58 PDT
Comment on
attachment 406344
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406344&action=review
> Source/WebCore/platform/DragData.h:62 > DragApplicationNone = 0,
Darin insisted I remove the "None" enums when switching to use OptionSet<>. We don't need to do that for this patch, but I'll look at doing it as a follow-up (and covert DragApplicationFlags to an enum class).
Chris Dumez
Comment 9
2020-08-10 16:46:07 PDT
Created
attachment 406345
[details]
Patch
EWS
Comment 10
2020-08-10 17:26:12 PDT
Committed
r265480
: <
https://trac.webkit.org/changeset/265480
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406345
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug