AuxiliaryProcess::didReceiveInvalidMessage() for WebPage::PerformDragControllerAction IPC https://bugs.webkit.org/show_bug.cgi?id=215341 <rdar://problem/59344091>

Reviewed by Alex Christensen.

Source/WebCore:

Consistently use OptionSet<DragApplicationFlags> instead of DragApplicationFlags.

* page/gtk/DragControllerGtk.cpp:
(WebCore::DragController::isCopyKeyDown):
* page/mac/DragControllerMac.mm:
(WebCore::DragController::isCopyKeyDown):
(WebCore::DragController::dragOperation):
* platform/DragData.cpp:
(WebCore::DragData::DragData):
* platform/DragData.h:
(WebCore::DragData::flags const):
* platform/cocoa/DragDataCocoa.mm:
(WebCore::DragData::DragData):
* platform/win/DragDataWin.cpp:
(WebCore::DragData::DragData):

Source/WebKit:

DragApplicationFlags is an enum containing flags. It was being sent over IPC as a DragApplicationFlags
instead of an OptionSet<DragApplicationFlags>, and thus would fail enum value validation when decoding
when more than one flag is set.

* Scripts/webkit/messages.py:
* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<DragData>::decode):
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::applicationFlagsForDrag):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::performDragControllerAction):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/WebPage.messages.in:

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/mac/DragAndDropTestsMac.mm:
(overrideCurrentEvent):
(TEST):


Canonical link: https://commits.webkit.org/228133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265480 268f45cc-cd09-0410-ab3c-d52691b4dbfc