Source/WebCore/platform/win/DragDataWin.cpp
@@ -41,7 +41,7 @@
 namespace WebCore {
 
 DragData::DragData(const DragDataMap& data, const IntPoint& clientPosition, const IntPoint& globalPosition,
-    OptionSet<DragOperation> sourceOperationMask, DragApplicationFlags flags)
+    OptionSet<DragOperation> sourceOperationMask, OptionSet<DragApplicationFlags> flags)
     : m_clientPosition(clientPosition)
     , m_globalPosition(globalPosition)
     , m_platformDragData(0)
